<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [<!ENTITY application_name "Loan">]>
<resources>

    <string name="loan_receive">Application Received</string>
    <string name="loan_order_number">Order under review</string>
    <string name="loan_disbursed_number">Loan Disbursed Successfully</string>
    <string name="loan_status_received_text">Loan Status:</string>
    <string name="loan_go">Get Now</string>
    <string name="loan_money_text">₹ 1500</string>
    <string name="loan_audit_reject_text">We are So  Sorry, the loan audit did not pass, Please apply later %s</string>
    <string name="loan_audit_invalid_text">The order is invalid because the loans have failed for many times. It is suggested that you apply again after changing your bank card.</string>
    <string name="loan_order_close_text">The order is closed because the payment cannot be made to your bank card. It is suggested that you apply again after changing your bank card. </string>
    <string name="loan_date">23-10-2019</string>
    <string name="loan_replay">Repay</string>
    <string name="loan_order_to_overdue_text">You are %s overdue！ The overdue fee is %s</string>
    <string name="loan_order_to_renewal_text">Your repayment date has been updated.</string>
    <string name="loan_status_to_repayment_text">Objective don\'t worry, we are waiting for the payment processing result,temporarily unable to operate repayment.</string>
    <string name="loan_total_interest">Total Interest：</string>
    <string name="loan_emi_1">EMI#1</string>
    <string name="loan_emi_2">EMI#2</string>
    <string name="loan_emi_content_1">Repayment in %s\nRepayment amount %s</string>
    <string name="loan_emi_content_2">Repayment in %s\nRepayment amount %s</string>
    <string name="loan_message_time">23-10-2019 13：02：01</string>
    <string name="loan_message">The loan application has been submitted.</string>
    <string name="loan_order_messge_title">Order Message</string>
    <string name="loan_announcement_title">Announcement</string>
    <string name="loan_repayment_date">Repayment Date：</string>
    <string name="loan_repayment_principal">Repayment Principal：</string>
    <string name="loan_interest">Interest：</string>
    <string name="loan_discount_amount">Discount Amount：</string>
    <string name="loan_overdue_fines">Overdue Fines：</string>
    <string name="loan_repayment_amount">Repayment Amount：</string>
    <string name="loan_prev_credit"> Please wait patiently while the order is submitted. Please pay attention to the SMS notice, you may need to submit again.</string>
    <string name="loan_change_bank">The loan failed, please change your bank card immediately, we will make the loan for you again.</string>
    <string name="loan_change_bank_btn">Change bank card</string>
    <string name="loan_credit_ing">Order submission failed. Please complete the questionnaire immediately.</string>
    <string name="loan_submit">Continue to submit</string>
    <string name="loan_delay">Delay</string>
    <string name="bill_details"><![CDATA[Bill Details>>]]></string>
    <string name="repayment_plan"><![CDATA[Repayment Plan>>]]></string>

    <string name="loan_review_tip">Please keep the phone available and more likely to be approved.</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="loan_repay_amount">Repayment Amount</string>
    <string name="pay_repayment_date">Repayment Date</string>
    <string name="loan_duration">Loan Duration</string>
    <string name="loan_bank_account">Bank account :</string>
    <string name="pay_order_loan_dur_day">%1$s Day(s)</string>
    <string name="loan_duration_day">%1$s Day(s)</string>
    <string name="loan_duration_month">%1$s Month</string>
    <string name="more">More</string>


    <string name="loan_detail_on">Order No.：</string>
    <string name="loan_detail_la">Loan Amount：</string>
    <string name="loan_detail_ld">Loan Duration：</string>
    <string name="loan_detail_tsf">Technical Service Fee：</string>
    <string name="loan_detail_gst">GST：</string>
    <string name="loan_detail_cp">Commission Payment：</string>
    <string name="loan_detail_ayg">Amount You Get：</string>
    <string name="loan_detail_t">Loan and Fee details</string>
    <string name="loan_detail_rp">Repayment Amount：</string>
    <string name="loan_detail_bi">Total interest（%1$s%% Daily Interest):</string>
    <string name="dialog_mall_order_commit_credit_report_tip">I agree that &application_name; can inquire my credit report and upload my repayment status in &application_name; to the credit report.</string>
    <string name="login_permission_sms_desc">Collect and monitor only financial transaction SMS which includes name of transacting party, a description of the tansaction and transaction amount for the purpose of performing a credit risk assessment. This credit risk assessment enables faster and quicker loan disbursal. No personal SMS are accessed, read or collected.</string>
    <string name="dialog_mall_order_commit_agreement_tip2">By using E-Signature technology, this agreement shall be protected by law&lt;&lt;&lt;Loan Agreement&gt;&gt;&gt;&amp;law&lt;&lt;&lt;Sanction Letter&gt;&gt;&gt;</string>
    <string name="mall_order_submit_loan_agreement"><u>Loan Agreement</u></string>
    <string name="mall_order_submit_sanction_letter"><u>Sanction Letter</u></string>
    <string name="mall_order_submit_loan_duration">%1$s Day(s)</string>
    <string name="dialog_mall_order_total_interest">Total interest（%1$s%% Daily Interest):</string>

    <string name="mall_buy_stage_day_tip">Repayment in %1$s Day(s)</string>
    <string name="mall_buy_stage_price_tip">Repayment amount ₹%1$s</string>
    <string name="pay_mutliple_emi">EMI#%1$s</string>

    <string name="dialog_main_order_commit_uncheck_tip">Credit report access rights are not selected</string>
    <string name="dialog_mall_order_commit_amount_more_than_0_tip">Please select an amount greater than 0 before submitting your order!</string>
    <string name="dialog_mall_order_try_again">The current number of orders is too many, please try again!</string>
    <string name="mall_order_commit_wait_title">Order waiting for submission</string>
    <string name="mall_order_commit_wait_hint_pre">Automatic jump after</string>
    <string name="mall_order_commit_wait_hint_last"> seconds.</string>
    <string name="loan_wait_hint">Please do not exit, otherwise your order will fail to submit.</string>
    <string name="order_credit_ask_question_title">Questionnaire surve</string>

    <string name="mall_order_submit">Sign and submit the order</string>
    <string name="pay_order_loan_amount">Loan Amount:</string>


    <string name="loan_repay">Repay</string>
    <string name="loan_pay_title">Repayment Plan</string>
    <string name="loan_bill_detail_title">Bill Details</string>
    <string name="loan_bill_interest">Interest：</string>
    <string name="loan_bill_total_interest">Total Interest：</string>
    <string name="loan_bill_repay_day">Repayment in %1$s day(s)</string>
    <string name="loan_bill_repay_money">Repayment amount %1$s</string>

    <string name="pay_order_no">Order No. ：</string>
    <string name="pay_order_no_point">Order No.</string>
    <string name="pay_order_date">Order Date:</string>
    <string name="pay_order_set_amount">Settlement Amount：</string>
    <string name="pay_order_discount_amount">Discount Amount：</string>
    <string name="pay_order_overdue_fee">Overdue Fines：</string>
    <string name="pay_order_interest">Interest：</string>
    <string name="pay_order_repay_pri">Repayment Principal：</string>
    <string name="pay_order_repay_date">Repayment Date：</string>
    <string name="pay_order_repay_amount">Repayment Amount：</string>
    <string name="pay_order_tip">If you settle the first payment, the second payment will also be settled.</string>
    <string name="pay_overdue_text">Overdue \n%1$s day(s)</string>
    <string name="pay_normal_text">Normal</string>
    <string name="pay_processing_text">Payment processing</string>

    <string name="pay_total_real_pay">Total Real Pay</string>
    <string name="pay_repayment_amount">Repayment \nAmount</string>
    <string name="pay_detail_delay_tip"><Data><![CDATA[Now you can pay <font color="#047538">%1$s</font> to extend the payment for <font color="#047538">%2$s</font> days.]]></Data></string>
    <!--##cashfree part begin##-->
    <!--cashfree call pay logic -->
    <string name="pay_method">Payment method：</string>
    <string name="pay_upi">UPI</string>
    <!--cashfree the custom pay page-->
    <string name="pay_last_pay_info">Saved payment information:</string>
    <string name="pay_card_no">Card—NO.</string>
    <string name="pay_upi_id">UPI ID—</string>
    <string name="pay_upi_id_hint">UPI ID</string>
    <string name="pay_now">Pay Now</string>

    <string name="pay_netbanking">Netbanking</string>
    <string name="pay_netbanking_more_banks">More Banks>></string>
    <string name="pay_netbanking_bob">BOB</string>
    <string name="pay_netbanking_icici">ICICI</string>
    <string name="pay_netbanking_hdfc">HDFC</string>
    <string name="pay_netbanking_axis">Axis</string>

    <!--Credit/Debit Card -->
    <string name="pay_credit_or_debit_card">Credit/Debit Card</string>
    <string name="pay_credit_card_nubmber">Card Number</string>
    <string name="pay_credit_card_holder_name">Card Holder Name</string>
    <string name="pay_credit_card_mmyy">MM/YY</string>
    <string name="pay_credit_card_cvv">CVV</string>
    <string name="pay_failed">Sorry,payment failed</string>

    <string name="pay_no_select_method">You have not selected payment method!</string>
    <string name="pay_method_parasm_input_complete">Please input the complete information before payment!</string>
    <!--##cashfree part end##-->

</resources>