<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/order_container"
        style="@style/LoanItemCardViewStyle"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:contentPaddingBottom="24dp"
        app:contentPadding="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/moneyTitle"
                style="@style/LoanOrderUnderReviewTitle"
                app:layout_constraintEnd_toStartOf="@id/dateTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dateTitle"
                style="@style/LoanOrderUnderReviewTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/moneyTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/money"
                style="@style/LoanOrderUnderReviewContent"
                app:layout_constraintEnd_toEndOf="@id/moneyTitle"
                app:layout_constraintStart_toStartOf="@id/moneyTitle"
                app:layout_constraintTop_toBottomOf="@id/moneyTitle"
                tools:text="@string/loan_money_text" />

            <TextView
                android:id="@+id/date"
                style="@style/LoanOrderUnderReviewContent"
                android:text="@string/loan_date"
                app:layout_constraintEnd_toEndOf="@id/dateTitle"
                app:layout_constraintStart_toStartOf="@id/dateTitle"
                app:layout_constraintTop_toBottomOf="@id/dateTitle" />

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/money">

                <Button
                    android:id="@+id/loan_delay"
                    style="@style/ButtonLoginYellowText"
                    android:layout_width="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/loan_delay" />

                <Button
                    android:id="@+id/loan_repay"
                    style="@style/ButtonLoginYellowText"
                    android:layout_width="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="1"
                    android:text="@string/loan_replay"
                    app:layout_constraintEnd_toStartOf="@id/loan_delay" />
            </LinearLayout>

            <TextView
                android:id="@+id/bill_details"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/bill_details"
                android:textColor="#fffdb900"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/tip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container" />

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/tip"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/loan_review_tip"
                android:textColor="#fffdb900"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bill_details" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
